--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,18 @@
   <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
+         
+  <properties>
+		<jdk.version>1.8</jdk.version>
+		<spring.version>5.1.2.RELEASE</spring.version>
+		<junit.version>4.11</junit.version>
+		<log4j.version>1.2.17</log4j.version>
+		<sonar.host.url>http://3.108.185.192:9000/</sonar.host.url>
+		<sonar.login>562d7d0d78f310fc7cb22f2661b3260b676fc74d</sonar.login>
+		<!-- <sonar.password>admin</sonar.password> -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
